Revision history for carton

{{$NEXT}}

v1.0.21  2015-05-15 12:21:47 PDT
        - Changed Module::Reader dependency to requires for now, since it will be required
          on the runtime by the fatpacked carton.

v1.0.20  2015-05-08 16:20:37 PDT
        - INCOMPATIBLE: Disable fatpack generation in carton bundle by default.
          Use the new standalone command carton fatpack, to generate vendor/bin/carton

v1.0.19  2015-05-01 17:48:06 PDT
        - Remove Module::Build and MakeMaker from prerequisite since cpanm will
          install them as required

v1.0.18  2015-04-29 13:46:21 PDT
        - Sort 02packages case insensitive, like PAUSE

v1.0.17  2015-04-27 16:18:04 PDT
        - Add back warnings to Carton::CLI
        - Properly fail when a command is not found in carton exec (hachi) #193

v1.0.16  2015-04-25 06:37:17 PDT
        - update 02packages.details.txt whitespace padding to follow PAUSE

v1.0.15  2015-04-20 11:13:32 CEST
        - downgrade some dependencies for fatpack-related tools to recommends
          (probably ship it as a separate distribution in the future)

v1.0.14  2015-04-20 00:07:26 CEST
        - same as v1.0.14

v1.0.13  2015-04-19 19:38:42 CEST
        - require cpanm 1.7030 for better cpanfile support
        - switch to MakeMaker
        - remove Exception::Class and Moo in favor of Class::Tiny
        - add an ability to set generator in Carton::Index for Carmel use

v1.0.12  2013-09-24 20:03:47 JST
        - up Path::Tiny
        - Add --no-fatpack to carton bundle #140

v1.0.11  2013-09-18 18:51:14 JST
        - Disable fatal warnings that comes with Moo. This will make Path::Tiny not fail
          on NFS without flock. #135

v1.0.10  2013-09-02 17:52:42 PDT
        - Documentation fixes
        - Support CRLF in snapshot (kan) #133

v1.0.9  2013-08-17 11:24:46 PDT
        - Workaround carton help shows wrong doc on case insensitive filesystems

v1.0.8  2013-08-16 18:38:14 PDT